# aa-grafana-dashboard

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
aagrafanadashboard/: app_settings.py  apps.py  auth_hooks.py  helpers.py  models.py  tasks.py  urls.py  views.py
aagrafanadashboard/migrations/: 0001_initial.py  0002_corporationmembertracking.py
aagrafanadashboard/templates/aagrafanadashboard/: index.html
